# eggress

./: .gitignore  AGENTS.md  Cargo.toml  Containerfile  EGGPROXY_ROADMAP.md  EGGRESS_ROADMAP.md  LICENSE  README.md  SECURITY.md  deny.toml  example-config.toml
crates/eggproxy-cli/: Cargo.toml
crates/eggproxy-cli/src/: main.rs
crates/eggproxy-core/: Cargo.toml
crates/eggproxy-core/src/: chain.rs  replay.rs
crates/eggproxy-protocol-http/: Cargo.toml
crates/eggproxy-protocol-http/src/: detect.rs  error.rs  lib.rs
crates/eggproxy-protocol-socks/: Cargo.toml
crates/eggproxy-protocol-socks/src/: detector.rs  lib.rs
crates/eggproxy-uri/: Cargo.toml
crates/eggproxy-uri/proptest-regressions/: lib.txt
crates/eggress-admin/: Cargo.toml
crates/eggress-admin/src/: lib.rs  pac.rs  reverse.rs  routes.rs  server.rs  static_content.rs
crates/eggress-cli/: Cargo.toml
crates/eggress-cli/src/: main.rs  pproxy_main.rs
crates/eggress-cli/tests/: advanced_transport_interop.rs  cli_exit_codes.rs  cli_tests.rs  differential_pproxy.rs  integration.rs  interoperability.rs  interoperability_curl.rs  interoperability_pproxy.rs  interoperability_shadowsocks.rs  interoperability_trojan.rs  oracle.rs  pproxy_binary.rs  pproxy_cli.rs  pproxy_differential.rs  pproxy_run_process.rs  pproxy_translation_golden.rs  reply_order.rs
crates/eggress-config/: Cargo.toml
crates/eggress-config/src/: compile.rs  error.rs  file.rs  lib.rs  model.rs  validate.rs
crates/eggress-config/tests/: fuzz_smoke.rs
crates/eggress-core/: Cargo.toml
crates/eggress-core/src/: capability.rs  chain.rs  connector.rs  detect.rs  dispatch.rs  lib.rs  listener.rs  relay.rs
crates/eggress-embed/: Cargo.toml
crates/eggress-embed/src/: error.rs  lib.rs  outbound.rs
crates/eggress-embed/tests/: error_redaction.rs  metrics_status.rs  proxy_traffic.rs  reload.rs  start_stop.rs
crates/eggress-metrics/: Cargo.toml
crates/eggress-metrics/src/: lib.rs
crates/eggress-pproxy-compat/: Cargo.toml
crates/eggress-pproxy-compat/src/: args.rs  diagnose.rs  diagnostics.rs  error.rs  exit_codes.rs  lib.rs  regex_compat.rs  tests.rs  tier.rs  translate.rs  uri.rs  warnings.rs
crates/eggress-protocol-http/: Cargo.toml
crates/eggress-protocol-http/src/: detect.rs  error.rs  h2_connect.rs  lib.rs
crates/eggress-protocol-http/tests/: connect_properties.rs  fuzz_smoke.rs
crates/eggress-protocol-raw/: Cargo.toml
crates/eggress-protocol-raw/src/: error.rs  lib.rs  tunnel.rs
crates/eggress-protocol-reverse/: Cargo.toml
crates/eggress-protocol-reverse/src/: client.rs  lib.rs  metrics.rs  server.rs
crates/eggress-protocol-reverse/tests/: integration.rs
crates/eggress-protocol-shadowsocks/: Cargo.toml
crates/eggress-protocol-shadowsocks/src/: address.rs  aead.rs  error.rs  lib.rs  method.rs  metrics.rs  nonce.rs  server.rs  tcp.rs  tcp_stream.rs  udp.rs
crates/eggress-protocol-shadowsocks/tests/: fuzz_smoke.rs  zz_debug_ssserver_interaction.rs
crates/eggress-protocol-socks/: Cargo.toml
crates/eggress-protocol-socks/src/: detector.rs  error.rs  lib.rs
crates/eggress-protocol-socks/tests/: codec_properties.rs  fuzz_smoke.rs
crates/eggress-protocol-trojan/: Cargo.toml
crates/eggress-protocol-trojan/src/: error.rs  hash.rs  lib.rs  tcp.rs
crates/eggress-protocol-trojan/tests/: fuzz_smoke.rs  request_properties.rs
crates/eggress-protocol-websocket/: Cargo.toml
crates/eggress-protocol-websocket/src/: error.rs  lib.rs
crates/eggress-protocol-websocket/tests/: fuzz_smoke.rs
crates/eggress-python/: Cargo.toml  pyproject.toml
crates/eggress-python/src/: lib.rs
crates/eggress-routing/: Cargo.toml
crates/eggress-routing/src/: health.rs  lease.rs  lib.rs  scheduler.rs  upstream.rs
crates/eggress-routing/tests/: properties.rs  (+1 more)
crates/eggress-runtime/: Cargo.toml
crates/eggress-server/: Cargo.toml
crates/eggress-system-proxy/: Cargo.toml
crates/eggress-testkit/: Cargo.toml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: h2_connect_authority.rs  http_connect_response.rs  route_match.rs  shadowsocks_frame.rs  socks5_handshake.rs  socks5_udp_datagram.rs  toml_config.rs  trojan_accept.rs  trojan_request.rs  uri_parse.rs  websocket_handshake.rs
python/: README.md  pyproject.toml
python-pproxy-compat/: README.md  pyproject.toml
python-pproxy-compat/pproxy/: __init__.py  __init__.pyi  cipher.py  cipherpy.py  plugin.py  proto.py  server.py
python/compat/: behavioral_probe_results.json  behavioral_probes.py  classification.json  classification.py  extract_api.py  pproxy_api_contract.json
python/eggress/: __init__.py  __init__.pyi  _asyncio.py  _asyncio_adapter.py  _compat.py  _eggress.pyi  _pproxy_proxy.py  async_connection.py  cipher.py  cipher.pyi  config.py  config.pyi  connection.py  exceptions.py  exceptions.pyi  outbound.py  plugin.py  plugin.pyi  pproxy.py  pproxy.pyi  pproxy_connection.py  protocol.py  protocol.pyi  service.py  service.pyi  wrapper.py  wrapper.pyi
python/examples/: async_service.py  pproxy_run.py  pproxy_translate.py  reload_config.py  start_socks5.py
python/tests/: TEST_TAXONOMY.md  test_asyncio_adapter_helpers.py  test_asyncio_semantic.py  test_channel_relay.py  test_cipher_truth.py  test_config.py  test_config_explain.py  test_connection.py  test_connection_behavioral.py  test_connection_leak.py  test_docs_examples.py  test_errors.py  test_metrics.py  test_milestone_c_functional.py  test_milestone_c_gap_fills.py  test_milestone_c_pproxy_compat.py  test_milestone_c_properties.py  test_outbound_stream_verification.py  test_performance_smoke.py  test_plugin.py  test_pproxy_compat.py  test_pproxy_concurrency.py  test_pproxy_diagnostics.py  test_pproxy_differential.py  test_pproxy_dropin.py  test_pproxy_oracle.py  test_pproxy_redaction.py  test_pproxy_utility_fixtures.py  test_protocol_behavioral.py  test_protocol_cipher.py  test_proxy_connection.py  test_proxy_object_behavioral.py  test_reload.py  test_reverse_uri_helper.py  test_server_lifecycle.py  test_server_lifecycle_pproxy.py  test_service.py  test_threading.py  test_wheel_import_smoke.py  test_wrapper.py
(+506 files in other folders)
