[workspace]
resolver = "2"
members = [
    "crates/eggress-admin",
    "crates/eggress-cli",
    "crates/eggress-config",
    "crates/eggress-core",
    "crates/eggress-metrics",
    "crates/eggress-server",
    "crates/eggress-uri",
    "crates/eggress-routing",
    "crates/eggress-protocol-http",
    "crates/eggress-protocol-socks",
    "crates/eggress-testkit",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
repository = "https://github.com/eggstack/eggress"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
clap = { version = "4", features = ["derive"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
bytes = "1"
http = "1"
httparse = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
socket2 = "0.5"
pin-project-lite = "0.2"
proptest = "1"
assert_cmd = "2"
predicates = "3"
tempfile = "3"
tokio-test = "0.4"
insta = "1"
trait-variant = "0.1"
ipnet = "2"
fastrand = "2"
arc-swap = "1"
prometheus-client = "0.22"
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"

# Internal crates
eggress-admin = { path = "crates/eggress-admin" }
eggress-core = { path = "crates/eggress-core" }
eggress-metrics = { path = "crates/eggress-metrics" }
eggress-uri = { path = "crates/eggress-uri" }
eggress-routing = { path = "crates/eggress-routing" }
eggress-protocol-http = { path = "crates/eggress-protocol-http" }
eggress-protocol-socks = { path = "crates/eggress-protocol-socks" }
eggress-testkit = { path = "crates/eggress-testkit" }
eggress-config = { path = "crates/eggress-config" }
eggress-server = { path = "crates/eggress-server" }
eggress-cli = { path = "crates/eggress-cli" }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
