[package]
name = "eggress-bench"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[workspace]
resolver = "2"
members = [
    "crates/eggress-admin",
    "crates/eggress-cli",
    "crates/eggress-config",
    "crates/eggress-core",
    "crates/eggress-metrics",
    "crates/eggress-runtime",
    "crates/eggress-server",
    "crates/eggress-transport-tls",
    "crates/eggress-udp",
    "crates/eggress-uri",
    "crates/eggress-routing",
    "crates/eggress-protocol-http",
    "crates/eggress-protocol-socks",
    "crates/eggress-protocol-shadowsocks",
    "crates/eggress-protocol-trojan",
    "crates/eggress-testkit",
    "crates/eggress-pproxy-compat",
    "crates/eggress-embed",
    "crates/eggress-python",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
repository = "https://github.com/eggstack/eggress"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
clap = { version = "4", features = ["derive"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
bytes = "1"
http = "1"
httparse = "1"
regex = "1"
once_cell = "1"
subtle = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
socket2 = "0.5"
pin-project-lite = "0.2"
proptest = "1"
assert_cmd = "2"
predicates = "3"
tempfile = "3"
tokio-test = "0.4"
insta = "1"
trait-variant = "0.1"
ipnet = "2"
fastrand = "2"
rand = "0.8"
arc-swap = "1"
prometheus-client = "0.22"
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "logging", "tls12"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["logging", "tls12"] }
webpki-roots = "0.26"
rustls-pemfile = "2"
pkcs8 = "0.11"
rcgen = "0.13"
criterion = { version = "0.5", features = ["html_reports"] }

# Internal crates
eggress-admin = { path = "crates/eggress-admin" }
eggress-core = { path = "crates/eggress-core" }
eggress-metrics = { path = "crates/eggress-metrics" }
eggress-uri = { path = "crates/eggress-uri" }
eggress-routing = { path = "crates/eggress-routing" }
eggress-protocol-http = { path = "crates/eggress-protocol-http" }
eggress-protocol-socks = { path = "crates/eggress-protocol-socks" }
eggress-protocol-shadowsocks = { path = "crates/eggress-protocol-shadowsocks" }
eggress-protocol-trojan = { path = "crates/eggress-protocol-trojan" }
eggress-transport-tls = { path = "crates/eggress-transport-tls" }
eggress-testkit = { path = "crates/eggress-testkit" }
eggress-config = { path = "crates/eggress-config" }
eggress-server = { path = "crates/eggress-server" }
eggress-udp = { path = "crates/eggress-udp" }
eggress-cli = { path = "crates/eggress-cli" }
eggress-runtime = { path = "crates/eggress-runtime" }
eggress-pproxy-compat = { path = "crates/eggress-pproxy-compat" }
eggress-embed = { path = "crates/eggress-embed" }

[dependencies]
criterion.workspace = true
tokio.workspace = true
eggress-core.workspace = true
eggress-routing.workspace = true
eggress-protocol-socks.workspace = true
eggress-protocol-http.workspace = true
ipnet.workspace = true
regex.workspace = true

[[bench]]
name = "tcp_relay"
harness = false

[[bench]]
name = "udp_relay"
harness = false

[[bench]]
name = "route_match"
harness = false

[[bench]]
name = "http_connect_upstream"
harness = false

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
