[package]
name = "eggress-fuzz"
version = "0.0.0"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
tokio = { version = "1", features = ["rt", "io-util", "time"] }

[dependencies.eggress-protocol-socks]
path = "../crates/eggress-protocol-socks"

[dependencies.eggress-core]
path = "../crates/eggress-core"

[dependencies.eggress-protocol-http]
path = "../crates/eggress-protocol-http"

[dependencies.eggress-protocol-trojan]
path = "../crates/eggress-protocol-trojan"

[dependencies.eggress-uri]
path = "../crates/eggress-uri"

[dependencies.eggress-routing]
path = "../crates/eggress-routing"

[dependencies.eggress-protocol-shadowsocks]
path = "../crates/eggress-protocol-shadowsocks"

[dependencies.eggress-protocol-websocket]
path = "../crates/eggress-protocol-websocket"

[dependencies.eggress-config]
path = "../crates/eggress-config"

[dependencies.toml]
version = "0.8"

[workspace]
members = ["."]

[[bin]]
name = "socks5_udp_datagram"
path = "fuzz_targets/socks5_udp_datagram.rs"
test = false
doc = false
bench = false

[[bin]]
name = "socks5_handshake"
path = "fuzz_targets/socks5_handshake.rs"
test = false
doc = false
bench = false

[[bin]]
name = "http_connect_response"
path = "fuzz_targets/http_connect_response.rs"
test = false
doc = false
bench = false

[[bin]]
name = "trojan_request"
path = "fuzz_targets/trojan_request.rs"
test = false
doc = false
bench = false

[[bin]]
name = "trojan_accept"
path = "fuzz_targets/trojan_accept.rs"
test = false
doc = false
bench = false

[[bin]]
name = "route_match"
path = "fuzz_targets/route_match.rs"
test = false
doc = false
bench = false

[[bin]]
name = "uri_parse"
path = "fuzz_targets/uri_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "shadowsocks_frame"
path = "fuzz_targets/shadowsocks_frame.rs"
test = false
doc = false
bench = false

[[bin]]
name = "toml_config"
path = "fuzz_targets/toml_config.rs"
test = false
doc = false
bench = false

[[bin]]
name = "websocket_handshake"
path = "fuzz_targets/websocket_handshake.rs"
test = false
doc = false
bench = false

[[bin]]
name = "h2_connect_authority"
path = "fuzz_targets/h2_connect_authority.rs"
test = false
doc = false
bench = false
