[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "eggress-pproxy-compat"
version = "0.1.0"
description = "Certified-subset import compatibility package providing the pproxy namespace via eggress"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT OR Apache-2.0"}
authors = [{name = "eggstack"}]
dependencies = [
    "eggress==0.1.0",
    "cryptography>=42,<47",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/eggstack/eggress"
Repository = "https://github.com/eggstack/eggress"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
pproxy = ["py.typed", "*.pyi"]
