# Local development convenience only.
# For release builds, use crates/eggress-python/pyproject.toml (the authoritative entrypoint).
[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "eggress"
version = "0.1.0"
requires-python = ">=3.9"
description = "Python bindings for the eggress proxy — pproxy-compatible URI translation, configuration, and service management"
readme = "README.md"
license = {text = "MIT OR Apache-2.0"}
authors = [{name = "eggstack"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: Proxy Servers",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/eggstack/eggress"
Repository = "https://github.com/eggstack/eggress"
Documentation = "https://github.com/eggstack/eggress#readme"
"Bug Tracker" = "https://github.com/eggstack/eggress/issues"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.23,<1", "tomli; python_version < '3.11'"]
cipher-api = ["cryptography>=42,<47"]

[tool.pytest.ini_options]
markers = [
    "unit: Unit implementation tests",
    "contract: Candidate contract tests",
    "differential: Paired oracle differential tests (gated)",
    "interop: External interoperability tests (gated)",
    "platform: Platform-specific tests",
    "certification: Release certification tests",
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "eggress"
module-name = "eggress._eggress"
include = ["eggress/**/*.py", "eggress/py.typed"]
