[package]
name = "eggproxy-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
eggproxy-uri.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
tokio-util.workspace = true
bytes.workspace = true
pin-project-lite.workspace = true
trait-variant.workspace = true

[lints]
workspace = true
