[package]
name = "eggproxy-protocol-socks"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
eggproxy-core.workspace = true
bytes.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
eggproxy-testkit.workspace = true

[lints]
workspace = true
