[package]
name = "eggproxy-uri"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true

[dev-dependencies]
serde_json.workspace = true
proptest.workspace = true

[lints]
workspace = true
