[package]
name = "eggress-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "eggress"
path = "src/main.rs"

[[bin]]
name = "pproxy"
path = "src/pproxy_main.rs"

[dependencies]
eggress-core.workspace = true
eggress-server.workspace = true
eggress-uri.workspace = true
eggress-routing.workspace = true
eggress-config.workspace = true
eggress-runtime.workspace = true
eggress-metrics.workspace = true
eggress-protocol-http.workspace = true
eggress-protocol-socks.workspace = true
eggress-pproxy-compat.workspace = true
eggress-system-proxy.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
tokio-util.workspace = true
serde_json.workspace = true
serde.workspace = true
tempfile.workspace = true

[dev-dependencies]
eggress-testkit.workspace = true
eggress-protocol-http.workspace = true
eggress-protocol-socks.workspace = true
eggress-protocol-shadowsocks.workspace = true
eggress-udp.workspace = true
eggress-routing.workspace = true
assert_cmd.workspace = true
predicates.workspace = true
base64 = "0.22"
rand.workspace = true
rcgen.workspace = true
rustls.workspace = true
tokio-rustls.workspace = true
toml.workspace = true

[lints]
workspace = true
