[package]
name = "eggress-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
eggress-core.workspace = true
eggress-uri.workspace = true
eggress-routing.workspace = true
eggress-admin.workspace = true
eggress-transport-tls.workspace = true
serde = { workspace = true, features = ["derive"] }
toml.workspace = true
thiserror.workspace = true
regex.workspace = true
ipnet.workspace = true

[dev-dependencies]
tempfile.workspace = true
rcgen = "0.13"

[lints]
workspace = true
