[package]
name = "eggress-metrics"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
prometheus-client.workspace = true
eggress-server.workspace = true
eggress-udp.workspace = true
eggress-protocol-shadowsocks.workspace = true
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
