[package]
name = "eggress-pproxy-compat"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "pproxy-compatible CLI and URI translation layer for Eggress"

[dependencies]
thiserror.workspace = true
serde.workspace = true
toml.workspace = true
tracing.workspace = true
eggress-config.workspace = true
eggress-uri.workspace = true

[dev-dependencies]
tempfile.workspace = true
assert_cmd.workspace = true
predicates.workspace = true

[lints]
workspace = true
