[package]
name = "eggress-protocol-shadowsocks"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Shadowsocks protocol implementation for eggress"

[dependencies]
thiserror.workspace = true
tokio.workspace = true
bytes.workspace = true
eggress-core.workspace = true
eggress-uri.workspace = true
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha2 = "0.10"
rand = "0.8"

[dev-dependencies]
tokio.workspace = true
eggress-testkit.workspace = true

[lints]
workspace = true
