[package]
name = "eggress-protocol-socks"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
eggress-core.workspace = true
bytes.workspace = true
thiserror.workspace = true
tokio.workspace = true
subtle.workspace = true

[dev-dependencies]
eggress-testkit.workspace = true
proptest.workspace = true

[lints]
workspace = true
