[package]
name = "eggress-protocol-trojan"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Trojan protocol implementation for eggress"

[dependencies]
thiserror.workspace = true
tokio.workspace = true
bytes.workspace = true
eggress-core.workspace = true
eggress-uri.workspace = true
eggress-transport-tls.workspace = true
rustls.workspace = true
sha2 = "0.10"
tokio-rustls.workspace = true

[dev-dependencies]
tokio.workspace = true
rcgen = "0.13"
rustls-pemfile = "2"
proptest.workspace = true

[lints]
workspace = true
