[package]
name = "eggress-protocol-websocket"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "WebSocket tunnel protocol implementation for eggress"

[dependencies]
tokio.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true
bytes.workspace = true
thiserror.workspace = true
tracing.workspace = true
eggress-core.workspace = true

[dev-dependencies]
tokio.workspace = true

[lints]
workspace = true
