[package]
name = "eggress-python"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
description = "Python bindings for the eggress proxy embed API"
publish = false

[lib]
name = "_eggress"
crate-type = ["cdylib"]

[dependencies]
eggress-embed = { workspace = true }
pyo3 = { version = "0.29", features = ["extension-module"] }
tokio = { workspace = true }
serde_json = "1"

[lints]
workspace = true
