[package]
name = "eggress-routing"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
eggress-core.workspace = true
eggress-uri.workspace = true
thiserror.workspace = true
regex.workspace = true
once_cell.workspace = true
ipnet.workspace = true
fastrand.workspace = true
arc-swap.workspace = true
tokio-util.workspace = true
tokio = { version = "1", features = ["time", "sync", "rt", "macros", "net"] }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
