[package]
name = "eggress-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
eggress-core.workspace = true
eggress-config.workspace = true
eggress-routing.workspace = true
eggress-server.workspace = true
eggress-admin.workspace = true
eggress-metrics.workspace = true
eggress-uri.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
thiserror.workspace = true
arc-swap.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
