[package]
name = "eggress-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
eggress-core.workspace = true
eggress-config.workspace = true
eggress-routing.workspace = true
eggress-server.workspace = true
eggress-admin.workspace = true
eggress-metrics.workspace = true
eggress-uri.workspace = true
eggress-udp.workspace = true
eggress-transport-tls.workspace = true
eggress-protocol-shadowsocks.workspace = true
eggress-protocol-reverse.workspace = true
rustls.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
thiserror.workspace = true
arc-swap.workspace = true
fastrand.workspace = true

[dev-dependencies]
tempfile.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tokio-rustls.workspace = true
eggress-admin.workspace = true
eggress-routing.workspace = true
eggress-core.workspace = true
eggress-uri.workspace = true
eggress-testkit.workspace = true
rcgen = "0.13"
eggress-transport-tls.workspace = true
eggress-protocol-trojan.workspace = true
eggress-protocol-shadowsocks.workspace = true
eggress-protocol-websocket.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true

[lints]
workspace = true
