[package]
name = "eggress-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dev-dependencies]
eggress-testkit.workspace = true
tokio = { version = "1", features = ["full", "test-util"] }

[dependencies]
eggress-core.workspace = true
eggress-uri.workspace = true
eggress-protocol-http.workspace = true
eggress-protocol-socks.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
thiserror.workspace = true

[lints]
workspace = true
