[package]
name = "eggress-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dev-dependencies]
eggress-testkit.workspace = true
tokio = { version = "1", features = ["full", "test-util"] }

[dependencies]
eggress-core.workspace = true
eggress-uri.workspace = true
eggress-routing.workspace = true
eggress-protocol-http.workspace = true
eggress-protocol-socks.workspace = true
eggress-protocol-shadowsocks.workspace = true
eggress-protocol-trojan.workspace = true
eggress-transport-tls.workspace = true
eggress-udp.workspace = true
rustls.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
thiserror.workspace = true
subtle.workspace = true
socket2.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[lints]
workspace = true
