[package]
name = "eggress-system-proxy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "System proxy inspection and configuration helpers for Eggress"

[dependencies]
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
