[package]
name = "eggress-testkit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
tempfile.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
tokio-rustls.workspace = true
rustls.workspace = true
rcgen = "0.13"

[dev-dependencies]
tokio-test.workspace = true

[lints]
workspace = true
