[package]
name = "eggress-testkit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "strict-report"
path = "src/bin/strict_report.rs"

[dependencies]
tokio.workspace = true
tempfile.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
tokio-rustls.workspace = true
rustls.workspace = true
rcgen = "0.13"
regex.workspace = true

[dev-dependencies]
tokio-test.workspace = true
eggress-config = { path = "../eggress-config" }
eggress-runtime = { path = "../eggress-runtime" }

[lints]
workspace = true
